testcases/error/duplicate_enum_variant.veryl
module duplicate_enum_variant {
    enum EnumA: logic<2> {
        A = 1,
        B = 1,
    }
}
